# evtx2es

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  entry_points.cfg  pyproject.toml  requirements.txt  setup.cfg  setup.py
.cursor/rules/: 01_python.mdc  02_tasks.mdc  03_project.mdc  04_forjapanese.mdc  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yaml  docker-compose.yml  postCreateCommands.fish  postCreateCommands.sh
.github/workflows/: build.yaml  publish-binary-pypi.yaml  publish-release.yaml  publish-to-pypi.yml  test.yaml  test.yml
scripts/: build.bat  build.fish  docker-compose.yaml
src/: __init__.py  evtx2es.py
src/evtx2es/: __init__.py  evtx2es.py
src/evtx2es/models/: ElasticsearchUtils.py  Evtx2es.py  MetaData.py
src/evtx2es/presenters/: Evtx2esPresenter.py  Evtx2jsonPresenter.py
src/evtx2es/views/: BaseView.py  Evtx2esView.py  Evtx2jsonView.py
tests/: conftest.py  test__init__.py  test_e2e.py
