[project]
name = "evtx2es"
version = "1.7.3"
description = "A library for fast parse & import of Windows Eventlogs into Elasticsearch."
readme = "README.md"
license = "MIT"
authors = [
    { name = "sumeshi", email = "sum3sh1@protonmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "elasticsearch>=9.0.2",
    "evtx>=0.8.9",
    "orjson>=3.10.18",
    "tqdm>=4.67.1",
    "urllib3>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "mypy>=1.16.0",
    "nuitka>=2.7.7",
    "pytest>=8.4.0",
]

[project.scripts]
evtx2es = "evtx2es.views.Evtx2esView:entry_point"
evtx2json = "evtx2es.views.Evtx2jsonView:entry_point"
