[project]
name = "evtx2es"
dynamic = ["version"]
description = "A fast library for parsing and importing Windows Event Logs into Elasticsearch."
readme = "README.md"
license = "MIT"
authors = [
    { name = "sumeshi", email = "sum3sh1@protonmail.com" }
]
requires-python = ">=3.13"

dependencies = [
    "elasticsearch>=9.3.0",
    "evtx>=0.11.0",
    "orjson>=3.11.7",
    "tqdm>=4.67.3",
    "urllib3>=2.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/evtx2es/__about__.py"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "nuitka[onefile]>=4.0.6",
    "pytest>=9.0.2",
]

[project.scripts]
evtx2es = "evtx2es.views.Evtx2esView:entry_point"
evtx2json = "evtx2es.views.Evtx2jsonView:entry_point"
