[metadata]
name = evtx2es
version = 1.0.2
url = https://github.com/sumeshi/evtx2es
author = S.Nakano
author_email = j15322sn@gmail.com
license_file = LICENSE
description = Import Windows EventLogs(.evtx files) to ElasticSearch.
long_description = file: README.md

[options]
zip_safe = False
package_dir =
    = src
packages = find:
install_requires = 
    elasticsearch
    evtx
    tqdm
    urllib3
entry_points = file: entry_points.cfg

[options.packages.find]
where=src